--- a/apply_order_detail.html
+++ b/apply_order_detail.html
@@ -6,10 +6,14 @@
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="./node_modules/swiper/dist/css/swiper.min.css">
+	<link rel="stylesheet" href="./SUI-Mobile-dev/dist/css/sm.css">
+	<link rel="stylesheet" href="./SUI-Mobile-dev/dist/css/sm-extend.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
+	<div class="page-group">
+		<div class="page page-current">
 			<div class="swiper-container detail-swiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
@@ -24,57 +28,58 @@
 				</div>
 				<div class="swiper-pagination"></div>
 			</div>
-	<ul class="info-wrapper verify">
-		<li class="info-list">
-			<span class="info-left">发布日期</span>
-			<span class="info-right">2017-09-14</span>
-		</li>
-		<li class="info-list">
-			<span class="info-left">产品名称</span>
-			<span class="info-right">纯棉T袖</span>
-		</li>
-		<li class="info-list">
-			<span class="info-left">工艺类别</span>
-			<span class="info-right">普通梭织薄料服装</span>
-			<span class="icon-arrow-r more"></span>
-		</li>
-		<li class="info-list">
-			<span class="info-left">订单数量</span>
-			<span class="info-right">1000件</span>
-		</li>
-		<li class="info-list play-father">
-			<span class="info-left">销售市场</span>
-			<span class="info-right">内销</span>
-			<span class="icon-arrow-r more"></span>
-		</li>
-		<li class="info-list play-father">
-			<span class="info-left">预计交货</span>
-			<span class="info-right">2017-12-12</span>
-			<span class="icon-arrow-r more"></span>
-		</li>
-		<li class="info-list play-father">
-			<span class="info-left">地区要求</span>
-			<span class="info-right">泉州</span>
-			<span class="icon-arrow-r more"></span>
-		</li>
-		<li class="info-list play-father">
-			<span class="info-left">订单说明</span>
-			<span class="info-right">需要保质保量</span>
-		</li>
-	</ul>
-	<a href="./apply_order.html" class="btn btn-default btn-top">申请接单</a>
+			<ul class="info-wrapper verify">
+				<li class="info-list">
+					<span class="info-left">发布日期</span>
+					<span class="info-right">2017-09-14</span>
+				</li>
+				<li class="info-list">
+					<span class="info-left">产品名称</span>
+					<span class="info-right">纯棉T袖</span>
+				</li>
+				<li class="info-list">
+					<span class="info-left">工艺类别</span>
+					<span class="info-right">普通梭织薄料服装</span>
+					<span class="icon-arrow-r more"></span>
+				</li>
+				<li class="info-list">
+					<span class="info-left">订单数量</span>
+					<span class="info-right">1000件</span>
+				</li>
+				<li class="info-list play-father">
+					<span class="info-left">销售市场</span>
+					<span class="info-right">内销</span>
+					<span class="icon-arrow-r more"></span>
+				</li>
+				<li class="info-list play-father">
+					<label for='date'>
+						<span class="info-left">预计交货</span>
+						<input class="placeholder-b" placeholder="2017-12-12" id="date"></input>
+						<span class="icon-arrow-r more"></span>
+					</label>
+				</li>
+				<li class="info-list play-father">
+					<label for="city-picker">
+						<span class="info-left">地区要求</span>
+						<input type="text" id="city-picker" class="placeholder-b" placeholder="泉州">
+						<span class="icon-arrow-r more"></span>
+					</label>
+				</li>
+				<li class="info-list play-father">
+					<span class="info-left">订单说明</span>
+					<span class="info-right">需要保质保量</span>
+				</li>
+			</ul>
+			<a href="./apply_order.html" class="btn btn-default btn-top">申请接单</a>
+		</div>
+	</div>
+
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./node_modules/swiper/dist/js/swiper.min.js"></script>
+	<script type='text/javascript' src='./node_modules/zepto/dist/zepto.js'></script>
+	<script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm-extend.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm-city-picker.min.js' charset='utf-8'></script>
 	<script type="text/javascript" src="./js/public.js"></script>
-	<script type="text/javascript">
-	var swiper = new Swiper('.swiper-container',{
-		pagination: '.swiper-pagination',
-		slidesPerView: 1,
-		paginationClickable: true,
-		spaceBetween: 30,
-		loop: true,
-		// autoplay: 1500
-	});
-	</script>
 </body>
 </html>
