--- a/lease_step.html
+++ b/lease_step.html
@@ -7,7 +7,6 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
-	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 </head>
 <body>
 	<ul class="step-wrapper">
@@ -30,32 +29,34 @@
 			<p class="title-top">选择租赁设备</p>
 			<p class="title-bottom">选择您需要的设备，或选择其他进行详细说明需求</p>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-check">
 			<span class="info-item">GC6710</span>
 			<i class="icon-check checked"></i>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-check">
 			<span class="info-item">GK0056</span>
 			<i class="icon-check checked"></i>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-check">
 			<span class="info-item">GK335</span>
 			<i class="icon-check checked"></i>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-check">
 			<span class="info-item">GC6170</span>
 			<i class="icon-check checked"></i>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-check">
 			<span class="info-item">GC6880</span>
 			<i class="icon-check checked"></i>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-check">
 			<span class="info-item">其他</span>
 			<i class="icon-check checked"></i>
 		</li>
 	</ul>
 	<a href="./lease_step2.html" class="btn btn-default btn-fixed">下一步</a>
+
+	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
