--- a/my_blance.html
+++ b/my_blance.html
@@ -7,7 +7,6 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
-	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 </head>
 <body>
 	<div class="pay-wrapper">
@@ -16,7 +15,7 @@
 				<i class="icon-check-bg"></i>
 			</div>
 			<div class="pay-ci pay-balance-ci">
-				<i class="icon-diamond"></i>
+				<i class="icon-money"></i>
 			</div>
 		</div>
 		<div class="pay-text">
@@ -26,6 +25,8 @@
 	</div>
 	<button type="button" class="btn btn-default">充值</button>
 	<button type="button" class="btn btn-white btn-bottom">提现</button>
+
+	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
