--- a/my_order.html
+++ b/my_order.html
@@ -7,7 +7,6 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src='./js/normalize.js'></script>
-	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 </head>
 <body>
 	<div class='nav-wrapper clearfix'>
@@ -18,7 +17,7 @@
 		<a href="#" class='nav-item fl'>已取消</a>
 	</div>
 	<div class="order">
-		<p class="order-title">订单号：<span>2817644777779</span><span>待维修订单</span></p>
+		<p class="order-title">订单号：<span>2817644777779</span><span>待付款</span></p>
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
@@ -37,11 +36,11 @@
 		<div class="order-option clearfix">
 			<button class='btn btn-white-s fr btn-active'>立即付款</button>
 			<button class='btn btn-white-s fr'>取消订单</button>
-			<button class='btn btn-white-s fr'>联系卖家</button>
+			<button class='btn btn-white-s fr'>联系商家</button>
 		</div>
 	</div>
 	<div class="order">
-		<p class="order-title">订单号：<span>2817644777779</span><span>待维修订单</span></p>
+		<p class="order-title">订单号：<span>2817644777779</span><span>待收货</span></p>
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
@@ -58,13 +57,12 @@
 		</ul>
 		<p class="order-total">共<span>15</span>件商品 合计：￥<span>2400.00</span>(包运邮)</p>
 		<div class="order-option clearfix">
-			<button class='btn btn-white-s fr btn-active'>立即付款</button>
-			<button class='btn btn-white-s fr'>取消订单</button>
-			<button class='btn btn-white-s fr'>联系卖家</button>
+			<button class='btn btn-white-s fr btn-active'>确认收货</button>
+			<button class='btn btn-white-s fr'>联系商家</button>
 		</div>
 	</div>
 	<div class="order">
-		<p class="order-title">订单号：<span>2817644777779</span><span>待维修订单</span></p>
+		<p class="order-title">订单号：<span>2817644777779</span><span>已完成</span></p>
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
@@ -82,7 +80,7 @@
 		<p class="order-total">共<span>15</span>件商品 合计：￥<span>2400.00</span>(包运邮)</p>
 	</div>
 	<div class="order">
-		<p class="order-title">订单号：<span>2817644777779</span><span>待维修订单</span></p>
+		<p class="order-title">订单号：<span>2817644777779</span><span>已取消</span></p>
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
@@ -99,6 +97,8 @@
 		</ul>
 		<p class="order-total">共<span>15</span>件商品 合计：￥<span>2400.00</span>(包运邮)</p>
 	</div>
+
+	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
