--- a/neutral.html
+++ b/neutral.html
@@ -18,29 +18,21 @@
 		<div class="page page-current">
 			<div class="info-wrapper verify">
 				<div class="info-list">
-				<label for='star-time' class='info-list'>
-					<span class="info-left">接单档期</span>
-					<input type="text" name="" id='my-input'>
-					<span class="icon-arrow-r more"></span>
-				</label>
+					<label for='date' class='info-list'>
+						<span class="info-left">接单档期</span>
+						<input type="text" id='date'>
+						<span class="icon-arrow-r more"></span>
+					</label>
+				</div>
 			</div>
+			<a href="./neutral_list.html" class="btn btn-default btn-top">开始找单</a>
 		</div>
-	<a href="./neutral_list.html" class="btn btn-default btn-top">开始找单</a>
+	</div>
 
-        </div>
-    </div>
-
-	<!-- <script type="text/javascript" src="./js/jquery_3.1.1.js"></script> -->
-	<!-- <script>$.noConflict();</script> -->
+	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
+	<script type='text/javascript' src='./node_modules/zepto/dist/zepto.js'></script>
+	<script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm-extend.min.js' charset='utf-8'></script>
 	<script type="text/javascript" src="./js/public.js"></script>
-   <script type='text/javascript' src='./node_modules/zepto/dist/zepto.js'></script>
-    <script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm.min.js' charset='utf-8'></script>
-    <script type='text/javascript' src='./SUI-Mobile-dev/dist/js/sm-extend.min.js' charset='utf-8'></script>
-
-    <script type="text/javascript">
-        $("#my-input").calendar({
-            value: ['2015-01-01']
-        });
-    </script>
 </body>
 </html>
