--- a/repair.html
+++ b/repair.html
@@ -26,7 +26,7 @@
 		<textarea class='intro' placeholder='请输入自我介绍'></textarea>
 	</div>
 	<div class='agree'>
-		<input type="checkbox" name="checkbox" class="checkbox">
+		<input type="checkbox" name="checkbox" class="check">
 		<span>已阅读并同意<a href="#">《相关条约》</a></span>
 	</div>
 	<a href="./into_lease.html" class="btn btn-default btn-bottom">保存</a>
