--- a/temporary.html
+++ b/temporary.html
@@ -7,7 +7,6 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src='./js/normalize.js'></script>
-	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 </head>
 <body>
 	<div class='nav-wrapper clearfix nav-6'>
@@ -19,7 +18,7 @@
 		<a href='./rating.html' class='nav-item fl'>评价</a>
 	</div>
 	<div class="order">
-		<p class="order-title">订单号：<span>2817644777779</span><span>待付款订单</span></p>
+		<p class="order-title">订单号：<span>2817644777779</span><span>待付款</span></p>
 		<div class="text-show clearfix order-bg">
 			<span class="text-name">单针平缝机</span>
 			<p class="text-content">
@@ -32,12 +31,11 @@
 		<div class="order-option clearfix">
 			<button class='btn btn-white-s fr btn-active'>立即付款</button>
 			<button class='btn btn-white-s fr'>取消订单</button>
-			<button class='btn btn-white-s fr'>联系卖家</button>
 		</div>
 	</div>
 
 	<div class="order">
-		<p class="order-title">订单号：<span>2817644777779</span><span>待维修订单</span></p>
+		<p class="order-title">订单号：<span>2817644777779</span><span>待接单</span></p>
 		<div class="text-show clearfix order-bg">
 			<span class="text-name">单针平缝机</span>
 			<p class="text-content">
@@ -48,8 +46,7 @@
 		</div>
 		<p class="order-total">费用合计：￥<span>2400.00</span></p>
 		<div class="order-option clearfix">
-			<button class='btn btn-white-s fr btn-active'>维修完成</button>
-			<button class='btn btn-white-s fr'>联系卖家</button>
+			<button class='btn btn-white-s fr'>取消订单</button>
 		</div>
 	</div>
 
@@ -94,6 +91,8 @@
 		</div>
 		<p class="order-total">费用合计：￥<span>2400.00</span></p>
 	</div>
+
+	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
