--- a/rating.html
+++ b/rating.html
@@ -55,6 +55,7 @@
 			</ul>
 		</div>
 	</div>
+	<textarea class="rating-text" placeholder="请输入详细评价"></textarea>
 	<button type="button" class="btn btn-default">提交</button>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
