--- a/repair.html
+++ b/repair.html
@@ -13,6 +13,26 @@
 		<p class="title-top">完善技能信息，即刻开启接单服务</p>
 		<p class="title-bottom">信息仅用于平台审核，不会泄露给任何组织或个人</p>
 	</div>
+	<ul class="info-wrapper verify">
+		<li class="info-list">
+			<span class="info-left">姓名</span>
+			<input type='text' placeholder="**文(请输入完整姓名)" class="info-right"></input>
+
+		</li>
+		<li class="info-list">
+			<span class="info-left">身份证号</span>
+			<input type='text' placeholder="输入身份证号" class="info-right"></input>
+		</li>
+		<li class="info-list">
+			<span class="info-left">手机号码</span>
+			<input type="tel" maxlength="11" placeholder="请输入手机号">
+			<input type="button" name="" value="获取验证码">
+		</li>
+		<li class="info-list">
+			<span class="info-left">验证码</span>
+			<input type='text' placeholder="输入验证码" class="info-right"></input>
+		</li>
+	</ul>
 	<div class='form-wrapper'>
 		<p class='text'>技能*</p>
 		<input type="text" placeholder='如：擅长电脑系统修理'>
