--- a/rating.html
+++ b/rating.html
@@ -15,7 +15,7 @@
 	</div>
 	<img src="./images/avatar2.0.png" alt="" class="avatar2">
 	<div class="name">李雷</div>
-	<ul class="rating" id="rating">
+	<ul class="rating clearfix" id="rating">
 		<li class="rating-item" title="很不好"></li>
 		<li class="rating-item" title="不好"></li>
 		<li class="rating-item" title="一般"></li>
