--- a/address_detail.html
+++ b/address_detail.html
@@ -10,15 +10,13 @@
 </head>
 <body>
 	<h3 class="p-title">选择地址</h3>
-	<div class='select-text'>
-		<span id="city-picker"><span class=''>选择详细地址</span></span>
+	<a href="./address_list.html" class='select-text a-block'>
+		<span class=''>选择详细地址</span>
 		<span class="icon-arrow-r more"></span>
-	</div>
+	</a>
 	<a href="#" class="btn btn-default btn-fixed">发布</a>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
-	<script type="text/javascript" src="./js/city.js"></script>
-	<script type="text/javascript" src="./js/picker.min.js"></script>
 	<script type="text/javascript" src='./js/public.js'></script>
 </body>
 </html>
